[package]
name = "mod-boot-logger"
version.workspace = true
description = "Early boot logger module for the Oro operating system"
publish = false
edition = "2021"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/oro"
license = "MPL-2.0"

[lints]
workspace = true

[dependencies]
oro-logo-rle.workspace = true
oro.workspace = true
