[package]
name = "mod-boot-logger"
version.workspace = true
description = "Early boot logger module for the Oro operating system"
publish = false
edition = "2024"
authors = [
	"Josh Junon (https//github.com/qix-)"
]
homepage = "https://oro.sh"
repository = "https://github.com/oro-os/oro"
license = "MPL-2.0"

build = "build.rs"

[lints]
workspace = true

[dependencies]
oro-logo-rle.workspace = true
oro.workspace = true
unicode-normalization = { version = "0.1.24", default-features = false }

[build-dependencies]
rusttype = "0.9.3"
quote = "1.0.38"
